Fixed overlapping issue on privacy page

--- a/src/pages/privacyPage/privacyPage.scss
+++ b/src/pages/privacyPage/privacyPage.scss
@@ -29,7 +29,6 @@
         }
         .Privacy_Section{
             width: 100%;
-            height: 100%;
             display: flex;
             flex-direction: column;
             gap: 20px;
